--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clase11",
   "version": "1.0.0",
-  "main": "prueba.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
